syntax = 'proto3';

import "google/protobuf/empty.proto";

package music;

service MusicService {
  rpc IncrementLoveCount (IncrementLoveCountRequest) returns (IncrementLoveCountResponse) {}
  rpc GetAllMusic (google.protobuf.Empty) returns (GetAllMusicResponse) {}
}

message IncrementLoveCountRequest {
  string musicId = 1;
}

message IncrementLoveCountResponse {
  string message = 1;
}

message GetAllMusicResponse {
  repeated Music music = 1;
}

message Music {
  string _id = 1;
  string name = 2;
  string artist = 3;
  string imgPath = 4;
  string type = 5;
}